# DronePlan

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: build-windows.yml
DronePlan/: ContentView.swift  DronePlanApp.swift
DronePlan.xcodeproj/: project.pbxproj
DronePlan.xcodeproj/xcuserdata/ac.xcuserdatad/xcschemes/: xcschememanagement.plist
DronePlan/Models/: FlightPlanModels.swift
DronePlan/Services/: KMZDocument.swift  KMZExporter.swift  PersistenceService.swift  USBFlightPlanUploader.swift
DronePlan/ViewModels/: FlightPlanStore.swift
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: Sync-RC2Mission.ps1
crates/droneplan-core/: Cargo.toml
crates/droneplan-core/examples/: generate_sample_kmz.rs
crates/droneplan-core/src/: error.rs  lib.rs
crates/droneplan-core/src/geo/: distance.rs  mod.rs  polygon.rs
crates/droneplan-core/src/kmz/: generator.rs  mod.rs  template.rs  wpml.rs
crates/droneplan-core/src/models/: flight_plan.rs  mod.rs  survey_area.rs  waypoint.rs
docs/: RC2_USB_Transfer.md  RC2_Windows_Import.md
