[workspace]
resolver = "2"
members = [
    "crates/droneplan-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/user/droneplan"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
geo = "0.28"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
