[package]
name = "droneplan-core"
description = "Core library for DronePlan - AI flight planning system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
zip.workspace = true
geo.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
